--- a/Website/index.html
+++ b/Website/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icons" href="../image/mf-logo .svg">
     <title>Website</title>
-    <link rel="icon" href="../image/mf-logo .svg">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="../font/style.css">
 </head>
@@ -19,6 +19,7 @@
                 <a id="box-hello" href="#">Say HelLo</a>
             </dv>
         </nav>
+    </header>
         <main>
 
             <section class="box-section1">
@@ -31,10 +32,82 @@
             <section class="box-section2">
                 <div class="box-container">
                     <h2>Hi, I'm Tokpastein. Nice to meet you.</h2>
-                    <p>Since beginning my journey as a freelance designer 12 <br> years ago, I've done remote work for agencies, <br> consulted for startups, and collaborated with talented <br> people to create digital products for both business and <br> consumer use. I'm quietly confident, naturally curious, <br> and perpetually working on improving my chops.</p>
+                    <p>Since beginning my journey as a freelance designer 12 years ago, I've done remote work for <br> agencies, consulted for startups, and collaborated with talented people to create digital <br> products for both business and consumer use. I'm quietly confident, naturally curious, and <br> perpetually working on improving my chops.</p>
+                </div>
+            </section>
+            <section class="box-section3">
+                <div class="box-article1">
+                    <div class="box-topk">
+                        <img class="icons" src="../icons/blocks-icon.svg" alt="">
+                        <div>
+                            <h2>Designer</h2>
+                            <p class="box-pargr">I value simple content structure, clean design patterns, and thaughtfull interactions.</p>
+                        </div>
+                        <div>
+                            <p class="box-do">Things I enjoy designing:</p>
+                            <p>Ux, UI, Web, Apps, Logos</p>
+                        </div>
+                        <div>
+                            <p class="box-foo">Design Tools:</p>
+                            <ul>
+                                <li>Affinity Designer</li>
+                                <li>Figma</li>
+                                <li>Pen & Paper</li>
+                                <li>Sketch</li>
+                                <li>Webflow</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="box-topk">
+                        <img class="icons" src="../icons/api-icon.svg" alt="">
+                        <div>
+                            <h2>Frontend Developer</h2>
+                            <p class="box-pargr">I like to code things from scratch, and enjoy bringing ideas to life in the browser.</p>
+                        </div>
+                        <div>
+                            <p class="box-do">Languages I speak:</p>
+                            <p>HTML, Pug, Slim, CSS, Sass, Git</p>
+                        </div>
+                        <div>
+                            <p class="box-foo">Dev Tools:</p>
+                            <ul>
+                                <li>Bitbucket</li>
+                                <li>Bootstrap</li>
+                                <li>Bulma</li>
+                                <li>Codekit</li>
+                                <li>Git</li>
+                                <li>Github</li>
+                                <li>Netlify</li>
+                                <li>Vscode</li>
+                            </ul>
+                        </div>
+                    </div> 
+                    <div class="box-topk">
+                        <img class="icons" src="../icons/bx-book.svg" alt="">
+                        <div>
+                            <h2>Mentor</h2>
+                            <p class="box-pargr">I genuinely care about people, and enjoy helping them work on their craft.</p>
+                        </div>
+                        <div>
+                            <p class="box-do">Experiences I draw from:</p>
+                            <p>UX/UI, Product design, Freelancing</p>
+                        </div>
+                        <div>
+                            <p class="box-foo">Mentor Stats:</p>
+                            <ul>
+                                <li>8+ years Experiences</li>
+                                <li>30+ short courses</li>
+                                <li>65+ bootcamps</li>
+                                <li>200+ students</li>
+                                <li>2,500+ mentor sessions</li>
+                                <li>60+ group critiques</li>
+                                <li>17,500+ comments</li>
+                            </ul>
+                        </div>
+                    </div>   
                 </div>
             </section>
         </main>
-    </header>
+    
 </body>
 </html>
